theme settings spacing issue

--- a/sass/glazed.admin.themesettings.scss
+++ b/sass/glazed.admin.themesettings.scss
@@ -356,7 +356,7 @@ $font_3: 'sans-serif';
       clear: none;
       padding-right: 10px;
       width: 40%;
-      height: 60px;
+      height: 70px;
       &.form-type-textfield {
         width: 60%;
       }
